--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body{
 }
 .right{
     width: 73vw;
-    min-height: 91vh;
+    min-height: 90vh;
     background-color: #121212;
     border: 2px solid #121212;
     margin:5px ;
@@ -37,6 +37,7 @@ body{
     position: absolute;
     right: 0;
     top: 0;
+    overflow-y: hidden;
 }
 
 .nav{
@@ -44,6 +45,22 @@ body{
     position: relative;
     /* background-color: rgb(83, 77, 77); */
 }
+
+.hamBurger{
+    height: 48px;
+    width: 48px;
+    border: none;
+    border-radius: 50%;
+    background-color: #1f1f1f;
+    font-size: 1.5rem;
+    position: absolute;
+    left: 80px;
+    display: none;
+}
+#hamburger{
+    color:#fff
+}
+
 .home-logo{
     height: 48px;
     width: 48px;
@@ -172,6 +189,8 @@ body{
  height: 50px;
  /* background-color: aquamarine; */
  margin: 1%;
+ gap: 1em;
+ position: relative;
 }
 
 .iB1{
@@ -196,6 +215,17 @@ body{
     font-size: 200%;
     background-color: transparent;
     border: none;
+    position: absolute;
+    right: 10px;
+}
+
+.close{
+    position: relative;
+    right: 10px;
+    font-size:x-large;
+    top: 4px;
+    visibility: hidden;
+    /* display: none; */
 }
 
 .plusID{
@@ -310,7 +340,7 @@ footer{
 
 .mainy{
     height: fit-content;
-    width: fit-content;
+    width: auto;
     overflow-y: scroll;
     scrollbar-width: thin;
     scrollbar-color:#7c7c7c #121212 ;
@@ -408,7 +438,7 @@ h1{
 
 .player-bar{
     background-color: #1f1f1f;
-    margin: 1rem;
+    margin: 1rem 1rem .5rem 1rem;
     height: 18vh;
     border-radius: 5px;
     flex-direction: column;
@@ -426,7 +456,7 @@ h1{
     width: 99%;
     gap: 2%;
     position: relative;
-    margin: 5px;
+    margin: 3px 5px 5px 5px;
 }
 .songNmae b{
     position: absolute;
@@ -441,7 +471,7 @@ h1{
 
 ol{
     width: 90%;
-    min-height: 90%;
+    min-height: 97%;
     /* background-color: #e41818; */
     padding-left: 1.5rem;
     overflow: hidden;
@@ -482,6 +512,12 @@ li{
     background-color: #121212;
     border-radius: 50%;
 }
+.title h2{
+    font-size: x-large;
+}
+.title h4{
+    font-size: medium;
+}
 
 .fa-circle-pause{
     font-size: x-large;
@@ -494,7 +530,8 @@ li{
 
 .contain h4{
     /* margin-left: 1rem; */
-    font-size: .95rem;
+    font-size: .8rem;
+    overflow-wrap: anywhere;
 }
 .seeek-bar{
     background-color: #ffffff96;
@@ -537,7 +574,7 @@ li{
 }
 
 .control{
-    margin-top: 10px;
+    margin-top: 6px;
     /* position: relative; */
     gap: 1rem;
 }
@@ -584,6 +621,14 @@ li:active{
 i:hover{
     color: #dddada;
     transition: .3s;
+}
+
+#hamburger:hover{
+    color: #d6d6d6;
+    transition: .3s;
+}
+#hamburger:active{
+    color: #ffffff96;
 }
 
 i:active{
@@ -635,4 +680,187 @@ i:active{
 
 .fb:active{
     transform: scale(1)
+}
+
+@media screen and (max-width:1400px){
+    body{
+        /* background-color:  #1ed760; */
+    }
+    .contain h4{
+        /* margin-left: 1rem; */
+        font-size: .7rem;
+        overflow-wrap: anywhere;
+    }
+    .title h2{
+        font-size:medium;
+    }
+    .title h4{
+        font-size: small;
+    }
+    .b1 {
+        position: relative;
+        left: 0%;
+        font-size: small;
+        border: none;
+        background-color: #000;
+        font-weight: 500;
+        color: #fff;
+        /* margin-right: 15px; */
+        /* margin: 0px 15px 0px 15px; */
+    }
+    .b {
+        /* background-color: aquamarine; */
+        width: 7%;
+        height: 36px;
+        border: 2px solid #fff;
+        position: relative;
+        left: 12%;
+        /* background-color: rgb(116, 107, 107); */
+        border-radius: 50px;
+    }
+
+    .b2 {
+        height: 100%;
+        width: 100%;
+        /* left: 20%; */
+        font-size: small;
+        font-weight: 500;
+        border: none;
+        border-radius: 50px;
+        color: #000;
+        background-color: #fff;
+    }
+    .container3 {
+        /* background-color: brown; */
+        height: 70%;
+        width: 15%;
+        border-left: 2px solid #7c7c7c;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .nav i{
+        font-size: smaller;
+    }
+    .nav button{
+        font-size: smaller;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    #hamburger {
+        color: #fff;
+        font-size: medium;
+    }
+    .form {
+        display: flex;
+        background-color: #f0f0f0;
+        height: 38px;
+        width: 38%;
+        justify-content: center;
+        align-items: center;
+        gap: 5px;
+        padding: .5em;
+        border-radius: 50px;
+        background-color: #1f1f1f;
+    }
+    .artists {
+        min-height: 1rem;
+        width: 26%;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: center;
+        margin: 0%;
+        cursor: pointer;
+        position: relative;
+        padding: 1rem 0 1rem 0;
+        border-radius: 10px;
+    }
+}
+
+@media screen and (max-width:1000px){
+    
+    .left{
+        position: absolute;
+        transition: 1s;
+        min-width: 14rem;
+        min-height: 91Vh;
+        background-color: #121212;
+        /* border: 2px solid #1f1f1f; */
+        margin:2.5px ;
+        margin-right: 5px;
+        top: 0px;
+        left: -100%;
+        z-index: 2;
+    }
+
+    .library{
+        width: 13%;
+    }
+    .iB1{
+        font-size:medium;
+    }
+    
+    .tags{
+        gap: 2px;
+    }
+    .right{
+        width: 98.5vw;
+        overflow: auto;
+    }
+    .hamBurger{
+        display: inline;
+    }
+    .player-bar{
+        position: relative;
+        z-index: 1;
+    }
+    .seeek-bar{
+        width: 91.5vw;
+    }
+    .head{
+        gap:10px;
+    }
+    .plus{
+        width: 10%;
+        height: 50%;
+        font-weight: 700;
+        color: #7c7c7c;
+        font-size: 150%;
+        background-color: transparent;
+        border: none;
+        position: relative;
+        /* right: 50px; */
+    }
+    
+    .close{
+        position: relative;
+        right: 10px;
+        font-size:larger;
+        top: 4px;
+        visibility:visible;
+        /* display: none; */
+    }
+    ol{
+        width: 85%;
+        min-height: 97%;
+    }
+    li {
+        height: 5rem;
+        justify-content: center;
+        align-content: center;
+        margin: 0rem;
+        border-bottom: 2px solid;
+    }
+    .songlist1 {
+        /* background-color: blueviolet; */
+        margin: 0.2rem 0rem 0.2rem 0%;
+        width: 89%;
+        gap: .1rem;
+        justify-content:center;
+        padding: 0px 5px 0px 8px;
+    }
+    main{
+        width: 92%;
+    }
 }
